Archive2/2a/3bd2cd7fc52ef7/output
+ g++ -std=c++1y -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter main.cpp
+ ./a.out
+ clang++ -std=c++1y -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp:3:5: error: non-type template argument evaluates to 10, which cannot be narrowed to type 'bool' [-Wc++11-narrowing]
foo<10> f;
    ^
1 error generated.
