Archive2/2a/3bd2cd7fc52ef7/main.cpp
template<bool>
struct foo{};
foo<10> f;

int main() {}